<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_nexus_transporter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lucadv@intrinsic.ai">lucadv</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>nexus_transporter</depend>
  <depend>nexus_endpoints</depend>
  <depend>nlohmann_json</depend>
  <depend>rmf_dispenser_msgs</depend>
  <depend>rmf_ingestor_msgs</depend>
  <depend>rmf_task_msgs</depend>
  <depend>rmf_utils</depend>
  <depend>std_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
